# phishproof

./: .gitignore  ARTIFACTS.md  CHECKSUMS.sha256  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
artifacts/: b3_bootstrap.json  b3_selfconsistency_full.jsonl  bundle_final.jsonl  bundle_samefamily.jsonl  calibrator.json  cascade.json  d1_import.json  detector_d1.jsonl  detector_d3.jsonl  esp.json  failure_modes.json  hfgea.json  leave_brands_out.json  operating_point.json  panel_strength.json  per_class_calibration.json  phishpedia_d1.jsonl  rq1_main.json  rq2_evasive.json  rq2_final.json  rq7_adaptive.json  rq7_both.json  rq7_cloak.json  rq7_occlude.json  subsumes_d1.json  verifier_soundness.json
configs/: experiment.yaml  panel.yaml  panel_samefamily.yaml  panel_strong.yaml  panel_weak.yaml
examples/: pages.jsonl
paper/: .gitignore  revision-plan.md
phishproof/: __init__.py  cache.py  cli.py  config.py  data_io.py  detectors.py  env.py  io.py  pipeline.py  types.py
scripts/: analyze_failures.py  build_combined.py  build_phishsel.py  build_results_bundle.py  build_zenodo_bundle.sh  check_calibration.py  check_experiments.py  check_metrics.py  check_panel.py  check_setup.py  check_tools.py  eval_verifier_soundness.py  fetch_crossfeed_subset.py  import_phishpedia_d1.py  ingest_phishpedia.py  make_all_tables.py  materialize_public_for_git.sh  preflight.py  progress.sh  rescore_ablation.py  rescore_consistency.py  rq1_aurc_consistency.py  run_adversarial.py  run_b3_selfconsistency.py  run_cascade.py  run_detectors.py  run_esp.py  run_evasive_subset.py  run_experiments.py  (+13 more)
(+88 files in other folders)
