[project]
name = "phishproof"
version = "0.1.0"
description = "PhishProof — Grounded Evidence-Agreement selective phishing detector"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tldextract>=5.0",
    "openai>=1.0",          # OpenAI-compatible client (used for both Ollama local + GPT-4o spot-check)
    "beautifulsoup4>=4.12",  # DOM parsing (Phase 2)
    "lxml>=5.0",
    "pillow>=10.0",          # screenshots
    "numpy>=1.26",
    "scikit-learn>=1.4",     # isotonic calibration (Phase 4)
]

[project.optional-dependencies]
# Heavier, phase-specific deps; install when you reach the phase.
logo = ["open-clip-torch", "torch"]   # logo-brand perceptual tool (Phase 2), runs CPU on Mac
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["phishproof*"]
