[project]
name = "phishproof"
version = "0.1.0"
description = "Public scaffold for the PhishProof phishing-detection pipeline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
phishproof = "phishproof.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["phishproof*"]
